jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL2-bad-UCHAR2-value.shex
# STRING_LITERAL2 with bad UCHAR2 value
# source: turtle-syntax-bad-esc-04.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["\U0000WXYZ"]
}
